--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,12 @@ img{
     width: 100%;
     display: block;
 }
+.my-button{
+    background-color: #1abc9c;
+    border: 1px solid white;
+    padding: 0.5rem 0.7rem;
+    border-radius: 7px;
+}
 .circle{
     border: 0.5px solid white;
     border-radius: 50%;
