--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,16 @@ img{
     margin: 0.2rem;
     font-size: 12px;
 }
+input{
+    border:none;
+    width: 100%;
+}
+.form-control{
+    border-top: 0;
+    border-radius: 0;
+    border-left: 0;
+    border-right: 0;
+}
 .facebook{
     padding: 0.6rem 0.8rem;
 }
